# askto-sales-agent

./: .gitignore  README.md
.github/workflows/: build-server.yml
client/: env.example  package.json  pnpm-lock.yaml
client/src/: config.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/api/config/: route.ts
client/src/app/api/decode-token/: route.ts
client/src/app/api/interview/save/: route.ts
client/src/app/api/start/: route.ts
client/src/app/decode/: page.tsx
client/src/components/: App.tsx  CustomConnectButton.tsx  SessionTypeSelect.tsx  TransportSelect.tsx  generic-loader.tsx
client/src/components/app/: animated-orb.tsx  event-log.tsx  interview-panel.tsx  transcript-panel.tsx
client/src/components/utils/alert-dialog/: coins-exhausted-dialog.tsx  disconnect-confirmation.tsx
client/src/lib/: auth.ts  interview.ts
client/src/lib/db/: client.ts  operations.ts
client/src/utils/: prompt-builder.ts
server/: .dockerignore  .env.example  Dockerfile  bot.py  docker-compose.yml  init.sql  pcc-deploy.toml  pyproject.toml
server/agent/: __init__.py  graph.py  llm_service.py  state.py
server/agent/memory/: __init__.py  models.py  postgres_client.py  redis_client.py
server/agent/nodes/: __init__.py  identity_node.py  memory_retriever.py  memory_writer.py  profile_extractor.py  response_node.py
server/agent/prompts/: __init__.py  card_details.py  discovery_prompt.py  objection_prompt.py  pitch_prompt.py
